--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -20,3 +20,10 @@ ruby:
     delivered fast, you should add Ruby to your toolbox.
   price: 49.50
   image_url: ruby.png
+
+coffee:
+  title: CoffeeScript
+  description:
+    CoffeeScript is JavaScript done right. It provides all of JavaScripts functionality wrapped in a cleaner, more succinct syntax.
+  price: 36.00
+  image_url: coffee.png
